tests/NormalTests/paczka1/fuzzy1/15854656.err
Error in line 1: BUBPrQRzEI A611 68,0
Error in line 18: A611 A773 14,5
Error in line 34: DFmdA S485 75,5
Error in line 36: DFmdA S812 20,3
